--- a/index.html
+++ b/index.html
@@ -7,40 +7,53 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body class="bg-slate-50 text-slate-800">
+<body class="bg-white text-gray-800 flex items-center justify-center min-h-screen">
 
-<header class="bg-emerald-700 text-white p-4 flex justify-between items-center">
-  <h1 class="font-bold text-lg"><i class="fa-solid fa-envelope"></i> Contáctanos</h1>
-  <a href="html.html" class="bg-white text-emerald-700 px-3 py-1 rounded">Volver al inicio</a>
-</header>
+  <!-- Contenedor centrado -->
+  <div class="w-full max-w-md bg-white shadow-md rounded p-8">
+    
+    <!-- Logo + Título -->
+    <div class="text-center mb-6">
+      <i class="fa-solid fa-envelope text-3xl text-emerald-600 mb-2"></i>
+      <h1 class="text-xl font-semibold">Contáctanos</h1>
+    </div>
 
-<main class="max-w-5xl mx-auto px-4 py-10 grid lg:grid-cols-2 gap-10 items-start">
-  
-
-  <div>
-    <h2 class="text-2xl font-bold mb-4">Formulario de contacto</h2>
-    <!-- Formulario con FormSubmit -->
+    <!-- Formulario -->
     <form action="https://formsubmit.co/b58372e3afafe5f908daf1b0cc3c700f" 
           method="POST" 
-          class="bg-white p-6 rounded shadow grid gap-4">
+          class="grid gap-4">
 
-      <input class="rounded-xl p-3 border" name="nombre" placeholder="Nombres y apellidos" required>
-      <input class="rounded-xl p-3 border" name="correo" placeholder="Correo electrónico" type="email" required>
-      <input class="rounded-xl p-3 border" name="telefono" placeholder="Teléfono" required>
-      <textarea class="rounded-xl p-3 border h-28 resize-none" name="mensaje" placeholder="Escriba su mensaje" required></textarea>
+      <input class="border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-1 focus:ring-emerald-500" 
+             name="nombre" placeholder="Nombres y apellidos" required>
+
+      <input class="border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-1 focus:ring-emerald-500" 
+             name="correo" placeholder="Correo electrónico" type="email" required>
+
+      <input class="border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-1 focus:ring-emerald-500" 
+             name="telefono" placeholder="Teléfono" required>
+
+      <textarea class="border border-gray-300 rounded px-4 py-2 h-28 resize-none focus:outline-none focus:ring-1 focus:ring-emerald-500" 
+                name="mensaje" placeholder="Escriba su mensaje" required></textarea>
       
-      <!-- Opcional: redirección después de enviar -->
+      <!-- Redirección después de enviar -->
       <input type="hidden" name="_next" value="https://tu-pagina.com/gracias.html">
-      <!-- Opcional: desactivar captcha -->
+      <!-- Desactivar captcha -->
       <input type="hidden" name="_captcha" value="false">
 
-      <!-- Botón de enviar -->
-      <button type="submit" class="bg-emerald-700 hover:bg-emerald-800 text-white py-3 rounded-xl font-semibold">
-        Enviar mensaje
+      <!-- Botón -->
+      <button type="submit" 
+              class="bg-blue-600 hover:bg-blue-700 text-white py-2 rounded font-medium">
+        Enviar
       </button>
     </form>
+
+    <!-- Link de volver -->
+    <div class="text-center mt-6">
+      <a href="html.html" class="text-sm text-blue-600 hover:underline">
+        Volver al inicio
+      </a>
+    </div>
   </div>
-</main>
 
 </body>
 </html>
