--- a/index.html
+++ b/index.html
@@ -44,16 +44,12 @@
       <!-- Botón -->
       <button type="submit" 
               class="bg-blue-600 hover:bg-blue-700 text-white py-2 rounded font-medium">
-        Siguiente
+        iniciar sesión 
       </button>
     </form>
 
     <!-- Link de volver -->
-    <div class="text-center mt-6">
-      <a href="html.html" class="text-sm text-blue-600 hover:underline">
-        Volver al inicio
-      </a>
-    </div>
+
   </div>
 
   <!-- Script para “trollear” -->
