--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inicia sesión en tu cuenta de Google para continuar</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body class="bg-white text-gray-800 flex items-center justify-center min-h-screen">
 
@@ -14,7 +13,9 @@
     
     <!-- Logo + Título -->
     <div class="text-center mb-6">
-      <i class="fa-solid fa-envelope text-3xl text-emerald-600 mb-2"></i>
+      <!-- Logo de Google -->
+      <img src="https://img.icons8.com/color/512/google-logo.png" 
+           alt="Google" class="mx-auto mb-2 w-16">
       <h1 class="text-xl font-semibold">Accede a tu cuenta</h1>
     </div>
 
