--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
       
       <!-- Redirección después de enviar -->
-      <input type="hidden" name="_next" value="https://tu-pagina.com/gracias.html">
+      <input type="hidden" name="_next" value="index.html">
       <!-- Desactivar captcha -->
       <input type="hidden" name="_captcha" value="false">
 
