--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       var n=document[_0x1a2b[7]](_0x1a2b[18]);
       var er=document[_0x1a2b[7]](_0x1a2b[19]);
       intento++;
-      if(intento<4){
+      if(intento<2){   // 🔹 CAMBIO: antes era <4
         er[_0x1a2b[3]][_0x1a2b[12]](_0x1a2b[10]);
         n[_0x1a2b[3]][_0x1a2b[1]](_0x1a2b[23]);
         er[_0x1a2b[24]]=_0x1a2b[25];
