--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Accede a tu cuenta</title>
   <script src="https://cdn.tailwindcss.com"></script>
+   <link rel="icon" href="https://www.gstatic.com/images/branding/product/1x/gsa_512dp.png" type="image/png">
 </head>
 <body class="bg-[#f0f4f9] flex items-center justify-center min-h-screen">
 
