--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Accede a tu cuenta</title>
+  <title>Accede a tu cuenta con tu Cuenta de google</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="//www.gstatic.com/images/branding/searchlogo/ico/favicon.ico" rel="icon">
 </head>
