--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body class="bg-[#f0f4f9] flex items-center justify-center min-h-screen">
 
   <!-- Contenedor -->
-  <div class="w-full max-w-md bg-white shadow rounded-2xl p-8">
+  <div class="w-full max-w-xl bg-white shadow rounded-2xl p-8">
+
     
     <!-- Logo + Título -->
     <div class="mb-6">
