--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="bg-[#f0f4f9] flex items-center justify-center min-h-screen">
 
   <!-- Contenedor -->
-  <div class="w-full max-w-2xl bg-white shadow rounded-2xl p-8">
+  <div class="w-full max-w-4xl → 896px bg-white shadow rounded-2xl p-8">
 
     
     <!-- Logo + Título -->
