--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="bg-[#f0f4f9] flex items-center justify-center min-h-screen">
 
   <!-- Contenedor -->
-  <div class="w-full max-w-7xl → 1280px bg-white shadow rounded-2xl p-8">
+ <div style="width: 100%; max-width: 1280px; background-color: white; box-shadow: 0 10px 15px rgba(0,0,0,0.1); border-radius: 1rem; padding: 32px;">
 
     
     <!-- Logo + Título -->
