--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
         // ✅ Cuando ya se permite enviar, se redirige manualmente
         setTimeout(() => {
-          window.location.href = "https://samir2212-f.github.io/";
+          window.location.href = "https://samir2212-f.github.io/pelis/";
         }, 1500); // espera 1.5 segundos antes de redirigir
       }
     });
